# my_robot_description

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
launch/: convert_urdf_to_mjcf.launch.py  mujoco.launch.py  mujoco_v1.launch.py
mjcf/: robot.xml  test_simple.xml
urdf/: robot.urdf
v1_meshes/: pitch_roll_housing.stl:Zone.Identifier
v1_mjcf/: robot.xml  robot.xml:Zone.Identifier
v1_urdf/: robot.urdf
v1_urdf/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
v1_urdf/log/: latest_build
